--- a/StarProject/Views/LostInfo/Index.cshtml
+++ b/StarProject/Views/LostInfo/Index.cshtml
@@ -22,7 +22,7 @@
 	
 	<!-- 搜尋框+每頁筆數 -->
     <div class="input-group input-group-lg">
-		<input id="searchInput" type="text" class="form-control" aria-label="Sizing example input">
+        <input id="searchInput" type="text" class="form-control" aria-label="Sizing example input" placeholder="請輸入關鍵字（名稱、分類、領取狀態）">
 		<button type="button" class="input-group-text search" id="btnSearch" data-bs-toggle="tooltip" data-bs-placement="bottom"
                 data-bs-title="搜尋" data-bs-trigger="hover">
             <i class="fa-solid fa-magnifying-glass"></i>
