--- a/StarProject/Views/CompanyNotifies/Index.cshtml
+++ b/StarProject/Views/CompanyNotifies/Index.cshtml
@@ -22,7 +22,7 @@
 
     <!-- 搜尋框+每頁筆數 -->
     <div class="input-group input-group-lg">
-        <input id="searchInput" type="text" class="form-control" aria-label="Sizing example input">
+        <input id="searchInput" type="text" class="form-control" aria-label="Sizing example input" placeholder="請輸入關鍵字（標題、公告類型）">
         <button type="button" class="input-group-text search" id="btnSearch" data-bs-toggle="tooltip" data-bs-placement="bottom"
                 data-bs-title="搜尋" data-bs-trigger="hover">
             <i class="fa-solid fa-magnifying-glass"></i>
@@ -176,10 +176,10 @@
 
 		<!-- 詳細內容 -->
 		<div class="modal fade" id="modalDetail" tabindex="-1" aria-labelledby="detailModalLabel" aria-hidden="true">
-			<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
+			<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
 				<div class="modal-content">
 					<div class="modal-header">
-						<h5 class="modal-title" id="modelTitle"></h5>
+						<h4 class="modal-title fw-bold" id="modelTitle"></h4>
 						<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
 					</div>
 					<div class="modal-body" id="modelCon"></div>
@@ -329,14 +329,12 @@
 
 			// 點搜尋按鈕
 			$('#btnSearch').on("click", () => {
-				console.log($('#searchInput').val());
 				refreshTable(1);
 				updateSelectedFilters()
 			});
 
 			// 也可以輸入框 keyup 即時觸發
 			$('#searchInput').on("keyup", () => {
-				console.log($('#searchInput').val());
 				refreshTable(1);
 				updateSelectedFilters()
 			});
