完成商品庫存查詢

--- a/StarProject/Views/Product/Index.cshtml
+++ b/StarProject/Views/Product/Index.cshtml
@@ -81,32 +81,32 @@
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="PROJOU" id="cat5">
-                                    <label class="form-check-label" for="cat5">
+                                    <input class="form-check-input" type="checkbox" value="PROJOU" id="cat6">
+                                    <label class="form-check-label" for="cat6">
                                         書籍刊物
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="PROKIT" id="cat5">
-                                    <label class="form-check-label" for="cat5">
+                                    <input class="form-check-input" type="checkbox" value="PROKIT" id="cat7">
+                                    <label class="form-check-label" for="cat7">
                                         餐廚用品
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="PROPAS" id="cat5">
-                                    <label class="form-check-label" for="cat5">
+                                    <input class="form-check-input" type="checkbox" value="PROPAS" id="cat8">
+                                    <label class="form-check-label" for="cat8">
                                         交通卡
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="PROSTA" id="cat5">
-                                    <label class="form-check-label" for="cat5">
+                                    <input class="form-check-input" type="checkbox" value="PROSTA" id="cat9">
+                                    <label class="form-check-label" for="cat9">
                                          設計文具
                                     </label>
                                 </div>
                                 <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="PROTEL" id="cat5">
-                                    <label class="form-check-label" for="cat5">
+                                    <input class="form-check-input" type="checkbox" value="PROTEL" id="cat10">
+                                    <label class="form-check-label" for="cat10">
                                         望遠鏡
                                     </label>
                                 </div>
@@ -132,13 +132,13 @@
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="預購" id="status2">
-                                    <label class="form-check-label" for="status1">
+                                    <label class="form-check-label" for="status2">
                                             預購
                                     </label>
                                 </div>
                                 <div class="form-check">
                                     <input class="form-check-input" type="checkbox" value="絕版" id="status3">
-                                    <label class="form-check-label" for="status1">
+                                    <label class="form-check-label" for="status3">
                                         絕版
                                     </label>
                                 </div>
@@ -148,7 +148,7 @@
 
                     <!-- 上架日期 -->
                     <li>
-                        <button type="button" class="dropdown-item fw-bold ps-2" data-bs-toggle="collapse" data-bs-target="#collapseStatus" aria-expanded="false" aria-controls="collapseCategory">
+                        <button type="button" class="dropdown-item fw-bold ps-2" data-bs-toggle="collapse" data-bs-target="#collapseDate" aria-expanded="false">
                                 - 上架日期
                         </button>
                     </li>
