--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -190,8 +190,8 @@
 
                 <div id="collapseTic" class="collapse" data-bs-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="#">票券列表</a>
-                        <a class="collapse-item" href="#">每日庫存查詢</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Ticket" asp-action="Index">票券列表</a>
+                        <a class="collapse-item" asp-area="" asp-controller="TicketStock" asp-action="Index">每日庫存查詢</a>
                     </div>
                 </div>
             </li>
