--- a/StarProject/Views/Ticket/Create.cshtml
+++ b/StarProject/Views/Ticket/Create.cshtml
@@ -1,15 +1,15 @@
-﻿@model StarProject.Models.Product
+﻿@model StarProject.ViewModels.TicketCreateViewModel
 
 @{
-    ViewData["Title"] = "新品上架";
+    ViewData["Title"] = "票券建立";
 }
-
 <head>
     <style>
-        *{
+        * {
             padding: 0;
             margin: 0;
         }
+
         .btn-topbar {
             --bs-btn-bg: rgb(250, 208, 72);
             --bs-btn-border-color: rgb(250, 208, 72);
@@ -20,6 +20,7 @@
             --bs-btn-active-border-color: #ffc720;
             --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
         }
+
         .btn-outline-back {
             --bs-btn-color: #DC3545;
             --bs-btn-border-color: #DC3545;
@@ -45,9 +46,26 @@
             --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
             --bs-gradient: none;
         }
+
+        .img500px img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover; /* cover = 等比縮放填滿框架，多的裁掉 */
+            display: none;
+        }
+
+        .img500px {
+            width: 500px; /* 固定寬度 */
+            height: 500px; /* 固定高度 */
+            overflow: hidden; /* 超出的部分裁掉 */
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid #ddd; /* 可選，看框線 */
+        }
     </style>
 </head>
-<h1 class="fw-bold">新品上架</h1>
+<h1 class="fw-bold">票券建立</h1>
 
 <div class="p-4 mt-3 rounded-4 bg-white">
     <h3 class="fw-bold mb-3"><i class="fa-solid fa-circle-info me-2"></i>基本資料</h3>
@@ -62,23 +80,40 @@
     <div class="tab-content border border-top rounded-end rounded-bottom">
         <div class="tab-pane fade show active" id="single">
             <div class="row">
-                <div class="col-6 m-5">
-                    <form asp-action="Create">
+                <div class="col-6 my-5 ms-5">
+                    <form asp-action="Create" method="post" enctype="multipart/form-data">
                         <div class="form-group d-flex align-items-center mb-3 row">
                             <div class="col-4 col-lg-2 fw-bold fs-5">
                                 <label asp-for="Name" class="control-label"></label>
                             </div>
                             <div class="col-8 col-lg-10">
-                                <input asp-for="Name" class="form-control" placeholder="商品名稱不可超過30個字" />
+                                <input asp-for="Name" class="form-control" placeholder="票券名稱不可超過30個字" />
                                 <span asp-validation-for="Name" class="text-danger"></span>
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center mb-3 row">
                             <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="ProCategoryNoNavigation.Name" class="control-label"></label>
+                                <label asp-for="ImageFile" class="control-label"></label>
                             </div>
                             <div class="col-8 col-lg-10">
-                                <select asp-for="ProCategoryNo" class="form-select" asp-items="ViewBag.ProCategoryName"></select>
+                                <input asp-for="ImageFile" type="file" class="form-control" accept="image/*" onchange="previewImage(event)" />
+                                <span asp-validation-for="ImageFile" class="text-danger"></span>
+                            </div>
+                        </div>
+                        <div class="form-group d-flex align-items-center mb-3 row">
+                            <div class="col-4 col-lg-2 fw-bold fs-5">
+                                <label class="control-label">票券種類</label>
+                            </div>
+                            <div class="col-8 col-lg-10">
+                                <select asp-for="TicCategoryNo" class="form-select" asp-items="ViewBag.TicCategoryNo"></select>
+                            </div>
+                        </div>
+                        <div class="form-group d-flex align-items-center mb-3 row">
+                            <div class="col-4 col-lg-2 fw-bold fs-5">
+                                <label asp-for="Type" class="control-label"></label>
+                            </div>
+                            <div class="col-8 col-lg-10">
+                                <select asp-for="Type" class="form-select" asp-items="ViewBag.TypeList"></select>
                             </div>
                         </div>
                         <div class="form-group d-flex align-items-center mb-3 row">
@@ -90,14 +125,6 @@
                                 <span asp-validation-for="Price" class="text-danger"></span>
                             </div>
                         </div>
-                        <div class="form-groupd d-flex align-items-center mb-3 row">
-                            <div class="col-4 col-lg-2 fw-bold fs-5">
-                                <label asp-for="Status" class="control-label"></label>
-                            </div>
-                            <div class="col-8 col-lg-10">
-                                <select asp-for="Status" class="form-select" asp-items="ViewBag.StatusList"></select>
-                            </div>
-                        </div>
                         <div class="form-group d-flex align-items-center mb-3 row">
                             <div class="col-4 col-lg-2 fw-bold fs-5">
                                 <label asp-for="ReleaseDate" class="control-label"></label>
@@ -107,23 +134,38 @@
                                 <span asp-validation-for="ReleaseDate" class="text-danger"></span>
                             </div>
                         </div>
+                        <div class="form-group d-flex align-items-center mb-3 row">
+                            <div class="col-4 col-lg-2 fw-bold fs-5">
+                                <label asp-for="Desc" class="control-label"></label>
+                            </div>
+                            <div class="col-8 col-lg-10">
+                                <textarea asp-for="Desc" class="form-control" rows="5" style="resize: none;" placeholder="選填，最多50個字"></textarea>
+                                <span asp-validation-for="Desc" class="text-danger"></span>
+                            </div>
+                        </div>
                         <div class="form-group d-flex gap-2 mt-2">
                             <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5">
                                 <i class="fa-solid fa-plus me-2"></i>新增
                             </button>
-                            <a asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
+                            <a asp-controller="Ticket" asp-action="Index" class="btn btn-outline-back flex-fill fw-bold fs-5">返回列表</a>
                         </div>
                     </form>
+                </div>
+                <div class="col my-5 ms-3">
+                    <div class="img500px">
+                        <!-- 圖片預覽 -->
+                        <img id="preview" src="#" alt="圖片預覽" />
+                    </div>
                 </div>
             </div>
         </div>
         <div class="tab-pane fade" id="multiple">
             <div class="row">
                 <div class="col-6 m-5">
-                    <a asp-controller="Product" asp-action="DownloadTemplate" class="btn btn-outline-excel fw-bold fs-5 mb-3">
+                    <a asp-controller="Ticket" asp-action="DownloadTemplate" class="btn btn-outline-excel fw-bold fs-5 mb-3">
                         <i class="fa-solid fa-file-excel"></i>下載excel範本
                     </a>
-                    <form asp-controller="Product" asp-action="CreateMultiple" method="post" enctype="multipart/form-data">
+                    <form asp-controller="Ticket" asp-action="CreateMultiple" method="post" enctype="multipart/form-data">
                         <input type="file" class="form-control fs-5" name="excelFile">
                         <div class="form-group d-flex gap-2 mt-3">
                             <button type="submit" class="btn btn-topbar flex-fill fw-bold fs-5" for="excelFile">上傳匯入</button>
@@ -140,3 +182,13 @@
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
 
+    <script>
+        function previewImage(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const preview = document.getElementById('preview');
+                preview.src = URL.createObjectURL(file); // 建立臨時 URL
+                preview.style.display = 'block';         // 顯示圖片
+            }
+        }
+    </script>
