--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -267,7 +267,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="#">訂單問題</a>
                         <a class="collapse-item" href="#">訊息管理</a>
-                        <a class="collapse-item" href="#">FAQ/常見問題</a>
+                        <a class="collapse-item" asp-area="" asp-controller="Faqs" asp-action="Index">FAQ/常見問題</a>
                     </div>
                 </div>
             </li>
