--- a/StarProject/Views/StarMaps/Index.cshtml
+++ b/StarProject/Views/StarMaps/Index.cshtml
@@ -123,7 +123,7 @@
 
     <!-- 詳細內容 -->
     <div class="modal fade" id="modalDetail" tabindex="-1" aria-labelledby="detailModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
+        <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
                     <h4 class="modal-title fw-bold" id="modelTitle"></h4>
