--- a/StarProject/Views/Shared/_Layout.cshtml
+++ b/StarProject/Views/Shared/_Layout.cshtml
@@ -338,16 +338,11 @@
                             <ul class="dropdown-menu mt-1 dropdownlist dropdown-menu-1000px-end">
                                 <li><a class="dropdown-item" href="#"><i class="fa-solid fa-user-tie"></i>個人資料</a></li>
                                 <li>
-                                    <a class="dropdown-item" href="#">
-                                        <i class="fa-solid fa-clock-rotate-left"></i>操作歷程
-                                    </a>
-                                </li>
-                                <li>
-                                    <a class="dropdown-item" href="#">
+                                    <a class="dropdown-item" asp-area="" asp-controller="Attendance" asp-action="Index">
                                         <i class="fa-regular fa-calendar-days"></i>出勤紀錄
                                     </a>
                                 </li>
-                                <li><a class="dropdown-item" href="#"><i class="fa-solid fa-paw"></i>請假系統</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Leave" asp-action="Index"><i class="fa-solid fa-paw"></i>請假系統</a></li>
                                 <li>
                                     <hr class="dropdown-divider">
                                 </li>
